--- a/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
+++ b/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
@@ -42,7 +42,7 @@
 						<ui:repeat value="#{practise.providers.toArray()}" var="t">
 
 							<tr>
-								<td style="border: 0px;"><h:outputText value="#{t.name}" />
+								<td style="border: 0px;"><h:outputText value="#{t.firstName} #{t.lastName}" />
 								</td>
 
 							</tr>
