--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -127,7 +127,7 @@
 				        </p:selectCheckboxMenu>
 						
 						
-					  <p:selectCheckboxMenu value="#{providerController.selectedPayers}" label="Select Payers"
+					  <!-- <p:selectCheckboxMenu value="#{providerController.selectedPayers}" label="Select Payers"
 				            filter="false" filterMatchMode="startsWith" style="width:177px"  var="t" required="true"
 				            converter="payerConverter" panelStyle="width:250px">
 				            
@@ -138,7 +138,7 @@
 								<h:outputText value="#{t.name}" />
 							</p:column>
 				            
-				        </p:selectCheckboxMenu> 
+				        </p:selectCheckboxMenu>  -->
 						
 				  	 
 				  	 	
