--- a/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
@@ -21,28 +21,28 @@
 					
 					<h:panelGrid columns="7" cellpadding="0">  
 					
-						<!-- <p:outputLabel for="idProviders" value="Select Provider: " /> -->
-						<!-- <p:selectOneMenu id="idProviders" value="#{reportsController.currentProvider}"
+						 <!-- <p:outputLabel for="idProviders" value="Select Provider: " />  -->
+						 <p:selectOneMenu id="idProviders" value="#{reportsController.currentProvider}"
 								panelStyle="width:180px" effect="fade" converter="providerConverter"
 								var="t" style="width:177px">
 								
-								<p:ajax event="change" listener="#{reportsController.onEntityChange}" update="idPayers" />
+								<!-- <p:ajax event="change" listener="#{reportsController.onEntityChange}" update="idPayers" /> -->
 								
 								<f:selectItem itemLabel="Select Provider" />
 								<f:selectItems value="#{reportsController.providerList}" var="entity"
-									itemLabel="#{entity.name}" itemValue="#{entity}"  />
+									itemLabel="#{entity.firstName} #{entity.lastName}" itemValue="#{entity}"  />
 	
 								<p:column>
-									<h:outputText value="#{t.name}" />
+									<h:outputText value="#{t.firstName} #{t.lastName}" />
 								</p:column>
-							</p:selectOneMenu> -->
+							</p:selectOneMenu> 
 							
 							
-						<p:selectCheckboxMenu id="idProviders" value="#{reportsController.selectedProviderList}" label="Select Providers"
+						<!-- <p:selectCheckboxMenu id="idProviders" value="#{reportsController.selectedProviderList}" label="Select Providers"
 				            filter="true" filterMatchMode="startsWith" style="width:177px"  var="t"
 				            converter="providerConverter" panelStyle="width:250px">
 				            
-				            <p:ajax event="change" listener="#{reportsController.onEntityChange}" update="idPayers" />
+				             <p:ajax event="change" listener="#{reportsController.onEntityChange}" update="idPayers" /> 
 				            
 				            <f:selectItems value="#{reportsController.providerList}" var="entity"
 									itemLabel="#{entity.firstName} #{entity.lastName}" itemValue="#{entity}"  />
@@ -51,7 +51,7 @@
 								<h:outputText value="#{t.firstName} #{t.lastName}" />
 							</p:column>
 				            
-				        </p:selectCheckboxMenu>
+				        </p:selectCheckboxMenu> -->
 							
 							
 						<!-- <h:outputLabel value="Select Payer: " /> -->
@@ -94,7 +94,7 @@
 					<p:dataTable value="#{reportsController.transactions}" var="transaction" >
 
 						<p:column headerText="Provider Name">
-							#{transaction.provider.name}
+							#{transaction.provider.firstName} #{transaction.provider.lastName}
 						</p:column>
 
 						<p:column headerText="Payer Name">
