--- a/src/main/webapp/Views/Secured/User/UserView.xhtml
+++ b/src/main/webapp/Views/Secured/User/UserView.xhtml
@@ -218,7 +218,7 @@ function createClicked(args,dialogName){
 					<p:commandButton id="btnSave" value="Save"
 						actionListener="#{userController.saveButtonClicked}"
 						widgetVar="btnSave"
-						update=":userTable,userForm,btnSave"
+						update=":userTable,userForm,btnSave,:userDialog"
 						 />
 					<!-- oncomplete="PF('userCreateDialog').hide()" -->
 				</h:form>
