--- a/src/main/webapp/Views/Template/top.xhtml
+++ b/src/main/webapp/Views/Template/top.xhtml
@@ -17,7 +17,7 @@
 		
 		<p:panelGrid columns="3" layout="grid">            
 		    <h:graphicImage value="/Images/Sypore_Logo.jpg" width="220" />
-		    <h:outputText value="Beendoo" style="font-size: 30px; font-weight: bold;" /> 
+		    <h:outputText value="ParTracker" style="font-size: 30px; font-weight: bold;" /> 
 		    <h:outputText value="#{sharedData.getFullName()}" style="float:right; margin-top:10px;" /> 
 		</p:panelGrid>
 
