--- a/src/main/webapp/Views/Secured/Reports/ReportTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportTransaction.xhtml
@@ -46,9 +46,22 @@
 
 					<p:dataTable value="#{reportsController.transactions}" var="transaction" >
 
-						<p:column headerText="Payer Name" filterMatchMode="contains" filterBy="#{transaction.payer.name}">
-							#{transaction.payer.name} #{transaction.payer.planName}
-						</p:column>
+						<p:column headerText="Payer Name">
+						 <!-- <p:column headerText="Payer Name" filterMatchMode="contains" filterBy="#{transaction.payer.name}"> -->
+							<!-- #{transaction.payer.name} #{transaction.payer.planName} -->
+							
+							<table>
+								<ui:repeat value="#{transaction.payerList.toArray()}" var="t">
+
+									<tr>
+										<td style="border: 0px;"><h:outputText value="#{t.name} #{t.planName}" />
+										</td>
+
+									</tr>
+								</ui:repeat>
+							</table>
+							
+						</p:column> 
 						
 						<p:column headerText="Practice Name" filterMatchMode="contains" filterBy="#{transaction.practice.name}">
 							#{transaction.practice.name}
