--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -142,9 +142,23 @@
 						
 				  	 
 				  	 	
-			            <p:inputText id="NpiNumber" value="#{providerController.provider.npiNum}" placeholder="Npi Number" required="true" /> 
-			            <p:inputText value="#{providerController.provider.firstName}" placeholder="First Name" required="true" />
-			            <p:inputText value="#{providerController.provider.lastName}" placeholder="Last Name" required="true" />
+			            <p:inputText id="NpiNumber" value="#{providerController.provider.npiNum}"
+			             placeholder="Npi Number"
+			             maxlength="10"
+			             label="NPI"
+			              required="true">
+			            
+			            <f:convertNumber integerOnly="true"/>
+			            <f:validateLength maximum="10" minimum="10" />
+			             </p:inputText> 
+			            <p:inputText value="#{providerController.provider.firstName}"
+			             placeholder="First Name"
+			             label="FirstName"
+			              required="true" />
+			            <p:inputText value="#{providerController.provider.lastName}"
+			             placeholder="Last Name"
+			             label="Last Name"
+			              required="true" />
 			            
 			       
 			        </h:panelGrid>   
