--- a/src/main/webapp/Views/Secured/Payer/PayerView.xhtml
+++ b/src/main/webapp/Views/Secured/Payer/PayerView.xhtml
@@ -63,11 +63,26 @@
 						</p:column>
 						
 						<p:column headerText="Edit"
-						 width="80"
-						 >
+						 width="80">
 							<p:commandButton icon="ui-icon-pencil" update=":myForm"
 								oncomplete="PF('Dlg1').show();" 
 								 action="#{payerController.updateClicked(payer)}" />
+								 
+								 
+							<p:commandButton icon="ui-icon-close" update=":mainForm" 
+								resetValues="true" action="#{payerController.removeClicked(payer)}">
+	
+								<p:confirm header="Confirmation" message="Are you sure?"
+									icon="ui-icon-alert" />
+							</p:commandButton>
+	
+							<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+								<p:commandButton value="Yes" type="button"
+									styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+								<p:commandButton value="No" type="button"
+									styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+							</p:confirmDialog>
+								 
 						</p:column>
 		
 					</p:dataTable>
