--- a/src/main/webapp/Views/Secured/Entity/EntityView.xhtml
+++ b/src/main/webapp/Views/Secured/Entity/EntityView.xhtml
@@ -36,7 +36,7 @@
 							#{entity.name}
 						</p:column>
 
-						<p:column headerText="Practise">
+						<p:column headerText="Practice">
 
 							<table>
 								<ui:repeat value="#{entity.practiceList.toArray()}" var="t">
